# emaldo_python

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml  setup.cfg
emaldo/: __init__.py  cli.py  e2e.py  extract_keys.py
