[metadata]
name = emaldo
version = 0.1.0
description = Python client library for Emaldo home battery systems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.28
    pycryptodome>=3.15
    cramjam>=2.6

[options.entry_points]
console_scripts =
    emaldo = emaldo.cli:main

[options.extras_require]
dev =
    pytest
    ruff
